--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,84 @@
                   <a class="notification icon-bell header__icons active" href="#">
                     <span>25</span>
                   </a>
+                  <div class="user__menu-decor"></div>
+                  <div class="notification__menu">
+                    <div class="message__menu-title">
+                      <div class="message__title">
+                        My Notifications
+                      </div>
+                      <a class="message__link" href="#">
+                        View All
+                      </a>
+                    </div>
+                    <div class="notification__items">
+                      <div class="notification__item">
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="notification__item-img"></a>
+                        <a class="notification__item-content" href="#">
+                          <div class="notification__item-name">
+                            Anderson
+                            <span class="notification__operation">added to Favourite</span>
+                          </div>
+                          <div class="notification__item-product">
+                            Marketify Coffee Shop
+                          </div>
+                          <div class="notification__item-time">
+                            Just now
+                          </div>
+                        </a>
+                        <div class="notification__item-icon icon-heart-o"></div>
+                      </div>
+                      <div class="notification__item">
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="notification__item-img"></a>
+                        <a class="notification__item-content" href="#">
+                          <div class="notification__item-name">
+                            Michael Jorden
+                            <span class="notification__operation">commented
+                              on</span>
+                          </div>
+                          <div class="notification__item-product">
+                            MartPlace Extension Bundle
+                          </div>
+                          <div class="notification__item-time">
+                            2 hours ago
+                          </div>
+                        </a>
+                        <div class="notification__item-icon icon-comment-o"></div>
+                      </div>
+                      <div class="notification__item">
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="notification__item-img"></a>
+                        <a class="notification__item-content" href="#">
+                          <div class="notification__item-name">
+                            Moshed
+                            <span class="notification__operation">Purchased</span>
+                          </div>
+                          <div class="notification__item-product">
+                            Bryson-Responsive Template
+                          </div>
+                          <div class="notification__item-time">
+                            6 hours ago
+                          </div>
+                        </a>
+                        <div class="notification__item-icon icon-shopping-cart"></div>
+                      </div>
+                      <div class="notification__item">
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="notification__item-img"></a>
+                        <a class="notification__item-content" href="#">
+                          <div class="notification__item-name">
+                            Tamim
+                            <span class="notification__operation">wrote a review on</span>
+                          </div>
+                          <div class="notification__item-product">
+                            Rida-Responsive vCard Temp...
+                          </div>
+                          <div class="notification__item-time">
+                            2 days ago
+                          </div>
+                        </a>
+                        <div class="notification__item-icon icon-star-o"></div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="message__box">
                   <a class="message icon-envelope header__icons active" href="#">
@@ -50,7 +128,7 @@
                     </div>
                     <div class="message__items">
                       <div class="message__item">
-                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item"></a>
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item-img"></a>
                         <a class="message__item-content" href="#">
                           <div class="message__item-top">
                             <div class="message__top-name">
@@ -67,7 +145,7 @@
                         </a>
                       </div>
                       <div class="message__item">
-                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item"></a>
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item-img"></a>
                         <a class="message__item-content" href="#">
                           <div class="message__item-top">
                             <div class="message__top-name">
@@ -84,7 +162,7 @@
                         </a>
                       </div>
                       <div class="message__item">
-                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item"></a>
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item-img"></a>
                         <a class="message__item-content" href="#">
                           <div class="message__item-top">
                             <div class="message__top-name">
@@ -101,7 +179,7 @@
                         </a>
                       </div>
                       <div class="message__item">
-                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item"></a>
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item-img"></a>
                         <a class="message__item-content" href="#">
                           <div class="message__item-top">
                             <div class="message__top-name">
@@ -117,7 +195,7 @@
                         </a>
                       </div>
                       <div class="message__item">
-                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item"></a>
+                        <a href="#"><img src="images/content/message-img.jpg" alt="" class="message__item-img"></a>
                         <a class="message__item-content" href="#">
                           <div class="message__item-top">
                             <div class="message__top-name">
@@ -238,30 +316,141 @@
           <div class="header__menu">
             <nav class="menu">
               <ul class="menu__list">
-                <li>
+                <li class="header__menu-home">
                   <a href="#">
                     HOME
                   </a>
+                  <div class="user__menu">
+                    <ul>
+                      <li><a href="#">Home One Multi User</a></li>
+                      <li><a href="#">Home Two Single User</a></li>
+                      <li><a href="#">Home Three Product</a></li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
+                <li class="header__menu-products">
                   <a href="#">
                     all products
                   </a>
+                  <div class="user__menu">
+                    <ul>
+                      <li><a href="#">Recent Items</a></li>
+                      <li><a href="#">Popular Items</a></li>
+                      <li><a href="#">Featured Items</a></li>
+                      <li><a href="#">Free Templates</a></li>
+                      <li><a href="#">Follow Feed</a></li>
+                      <li><a href="#">Top Authors</a></li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
-                  <a href="#">
+                <li class="header__menu-wordpress">
+                  <a href=" #">
                     wordpress
                   </a>
+                  <div class="user__menu">
+                    <ul>
+                      <li><a href="#">Popular Items</a></li>
+                      <li><a href="#">Admin Templates</a></li>
+                      <li><a href="#">Blog / Magazine / News</a></li>
+                      <li><a href="#">Creative</a></li>
+                      <li><a href="#">Corporate Business</a></li>
+                      <li><a href="#">Resume Portfolio</a></li>
+                      <li><a href="#">eCommerce</a></li>
+                      <li><a href="#">Entertainment</a></li>
+                      <li><a href="#">Landing Pages</a></li>
+                    </ul>
+                  </div>
                 </li>
                 <li>
                   <a href="#">
                     festures
                   </a>
                 </li>
-                <li>
+                <li class="header__menu-pages">
                   <a href="#">
                     Pages
                   </a>
+                  <div class="header__pages-menu">
+                    <div class="header__pages-items">
+                      <div class="header__pages-item">
+                        <div class="header__item-title">
+                          MartPlace Pages
+                        </div>
+                        <ul class="header__item-list header__item-list--one">
+                          <li><a href="#">Home Page One</a></li>
+                          <li><a href="#">Home Page Two</a></li>
+                          <li><a href="#">Home Page Three</a></li>
+                          <li><a href="#">Products Grid</a></li>
+                          <li><a href="#">Products List</a></li>
+                          <li><a href="#">Category Grid Sidebar</a></li>
+                          <li><a href="#">Category List Sidebar</a></li>
+                          <li><a href="#">Search Product</a></li>
+                          <li><a href="#">Single Product V-1</a></li>
+                          <li><a href="#">Single Product V-2</a></li>
+                          <li><a href="#">Single Product V-3</a></li>
+                          <li><a href="#">Single Items Comments</a></li>
+                          <li><a href="#">Single Items Reviews</a></li>
+                          <li><a href="#">Single Items Support</a></li>
+                          <li><a href="#">Single Items FAQs</a></li>
+                          <li><a href="#">Favorites Items</a></li>
+                          <li><a href="#">Author Profile</a></li>
+                          <li><a href="#">Author Items</a></li>
+                          <li><a href="#">Customer Reviews</a></li>
+                          <li><a href="#">Followers</a></li>
+                          <li><a href="#">Following</a></li>
+                          <li><a href="#">Product View Variations</a></li>
+                        </ul>
+                      </div>
+                      <div class="header__pages-item">
+                        <div class="header__item-title">
+                          Dashboard
+                        </div>
+                        <ul class="header__item-list header__item-list--two">
+                          <li><a href="#">Dashboard</a></li>
+                          <li><a href="#">Account Settings</a></li>
+                          <li><a href="#">Author Purchases</a></li>
+                          <li><a href="#">Items Rating</a></li>
+                          <li><a href="#">Add Credits</a></li>
+                          <li><a href="#">Statements</a></li>
+                          <li><a href="#">Invoice</a></li>
+                          <li><a href="#">Upload Item</a></li>
+                          <li><a href="#">Edit Items</a></li>
+                          <li><a href="#">Withdrawals</a></li>
+                          <li><a href="#">Add Payment Method</a></li>
+                        </ul>
+                      </div>
+                      <div class="header__pages-item">
+                        <div class="header__item-title">
+                          Others Pages
+                        </div>
+                        <ul class="header__item-list header__item-list--three">
+                          <li><a href="#">Notifications</a></li>
+                          <li><a href="#">Message Inbox</a></li>
+                          <li><a href="#">Message Compose</a></li>
+                          <li><a href="#">Shopping Cart</a></li>
+                          <li><a href="#">Checkout</a></li>
+                          <li><a href="#">Login</a></li>
+                          <li><a href="#">Register</a></li>
+                          <li><a href="#">Recovery Password</a></li>
+                          <li><a href="#">Support Forum</a></li>
+                          <li><a href="#">Forum Details</a></li>
+                          <li><a href="#">How It Works</a></li>
+                          <li><a href="#">About Us</a></li>
+                          <li><a href="#">Pricing Plan</a></li>
+                          <li><a href="#">Testimonials</a></li>
+                          <li><a href="#">FAQs</a></li>
+                          <li><a href="#">FAQs Details</a></li>
+                          <li><a href="#">Affiliates</a></li>
+                          <li><a href="#">Terms & Conditions</a></li>
+                          <li><a href="#">Blog V-1</a></li>
+                          <li><a href="#">Blog V-2</a></li>
+                          <li><a href="#">Blog Details</a></li>
+                          <li><a href="#">Contact Us</a></li>
+                          <li><a href="#">Menu & Footer Variation</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
                 </li>
               </ul>
             </nav>
